# 17-R5C-wrt

./: .gitignore  01-阶段任务完成.md  CMakeLists.txt  FILE_CHECKLIST.md  FINAL_SUMMARY.md  GATEWAY_BRIDGE_DESIGN.md  GATEWAY_README.md  IMPLEMENTATION_GUIDE.md  POLL-Mbpoll1.mbp  PROJECT_COMPLETION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  S7_OPCUA_IMPLEMENTATION.md  START_HERE.md  TODO.md  UPDATE_NOTES.md  readme.md  项目说明.md
build-alpine/src/modbusd/: modbusd
build-alpine/src/rs485d/: rs485d
build-alpine/src/webcfg/: webcfg
build-wrt-static/src/modbusd/: modbusd
build-wrt-static/src/opcuad/: opcuad
build-wrt-static/src/rs485d/: rs485d
build-wrt-static/src/s7d/: s7d
build-wrt-static/src/webcfg/: webcfg
config/: config.json  gateway_config.json
docs/: DEPLOYMENT_CHECKLIST.md  DEPLOY_GUIDE.md  INSTALL_FIX.md  IPK_FIX.md  IPK_FIX_FINAL.md  IPK_FIX_FINAL_SOLUTION.md  README_RS485_CONFIG.md  S7_OPCUA_GUIDE.md  SCRIPT_USAGE_GUIDE.md  STEP_BY_STEP.md
openwrt/init.d/: gw-gateway
package/: gw-gateway_1.0.0_aarch64_cortex-a53.ipk
package/gw-gateway_1.0.0_aarch64_cortex-a53/CONTROL/: control  postinst  prerm
package/gw-gateway_1.0.0_aarch64_cortex-a53/etc/init.d/: gw-gateway
scripts/: README_open62541.md  build.sh  build_and_deploy.sh  build_gateway.sh  build_open62541.sh  deploy_wrt.sh  gateway.bat  install_deps.sh  install_service.sh  start.sh  stop.sh  test_gateway.py
scripts/wrt/: build_alpine.sh  build_and_deploy.sh  build_musl.sh  build_open62541.sh  build_static.sh  deploy_wrt.sh  start.sh  start_local_wrt.sh  stop.sh  verify_ipk.sh
src/common/: CMakeLists.txt  config.cpp  config.h  logger.cpp  logger.h  ndm.h  shm_ring.cpp  shm_ring.h  status_writer.cpp  status_writer.h
src/gateway-bridge/: CMakeLists.txt  main.cpp
src/gateway-bridge/common/: config.cpp  config.h  types.h
src/gateway-bridge/mapping/: data_converter.cpp  data_converter.h  mapping_engine.cpp  mapping_engine.h
src/gateway-bridge/protocols/: modbus_rtu_master.cpp  modbus_rtu_master.h  modbus_tcp_server.cpp  modbus_tcp_server.h  s7_client.cpp  s7_client.h
src/modbusd/: CMakeLists.txt  main.cpp
src/opcuad/: CMakeLists.txt  main.cpp
src/rs485d/: CMakeLists.txt  main.cpp
src/s7d/: CMakeLists.txt  main.cpp
src/webcfg/: CMakeLists.txt  main.cpp
systemd/: gateway-bridge.service  gw-modbusd.service  gw-opcuad.service  gw-rs485d.service  gw-s7d.service  gw-webcfg.service
tests/: test_all_protocols.sh  test_modbus_client.py  test_opcua_server.py  test_s7_server.py  test_usb_rs485.cpp
